--- a/Site/cadastro.html
+++ b/Site/cadastro.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="style/style.css">
     <title>Cadastro</title>
     <header>
-        <div>
+        <div class="navegar">
             <div>
-                <img src="" alt="">
+                <img src="imgs/logo2.png" alt="">
             </div>
             <ul class="menu">
                 <li>Sobre Mim</li>
