--- a/Site/index.html
+++ b/Site/index.html
@@ -8,7 +8,7 @@
     <header>
         <div class="navegar">
             <div>
-                <img src="imgs/logo.png" style="width: 100px; height: 45px;" alt="">
+                <img src="imgs/logo2.png" alt="logo">
             </div>
             <ul class="menu">
                 <li>Sobre Mim</li>
