--- a/web data viz/public/sobre-o-livro.html
+++ b/web data viz/public/sobre-o-livro.html
@@ -34,9 +34,9 @@
                 
                 <img src="imgs/capa-livro.jpg" style="width: 80%; height: 80%; padding-top: 25px;" alt="" > 
                 <div class="kpi"> 
-                    <h2>4.5</h2>
+                    <h2>4.5</h2> <!--tornar dinamico-->
                 </div>    
-                <div class="rating">
+                <div class="rating">  <!--inserir função-->
                 <input type="radio" id="star5" name="rating" value="5" />
                 <label for="star5" title="5 estrelas">★</label>
                 <input type="radio" id="star4" name="rating" value="4" />
