Idealização da Dash e alterações na API

--- a/Site/cadastro.html
+++ b/Site/cadastro.html
@@ -58,7 +58,7 @@
                 <input type="checkbox" id="inputNewsletter" style="align-self: flex-start;"> 
                 Desejo receber a newsletter.
                 </label>
-                <button>Cadastrar</button>
+                <button onclick="cadastrar()">Cadastrar</button>
             </div>
 
         </div>
