--- a/Site/login.html
+++ b/Site/login.html
@@ -37,8 +37,8 @@
                 <span>Email:</span>
                 <input type="text" id="email_input">
                 <span>Senha:</span>
-                <input type="text" id="senha_input">
-                <button>Login</button> <br>
+                <input type="password" id="senha_input">
+                <button onclick="entrar()">Login</button> <br>
                 <span>Não tem conta? <br>
                 Cadastre-se <a href="cadastro.html" style="color: #702424;">aqui</a>.
                 </span>
@@ -58,25 +58,18 @@
 
 
     function entrar() {
-        aguardar();
-
         var emailVar = email_input.value;
         var senhaVar = senha_input.value;
 
         if (emailVar == "" || senhaVar == "") {
-            cardErro.style.display = "block"
-            mensagem_erro.innerHTML = "(Mensagem de erro para todos os campos em branco)";
-            finalizarAguardar();
+            alert('Verifique o email e senha.')
             return false;
-        }
-        else {
-            setInterval(sumirMensagem, 5000)
         }
 
         console.log("FORM LOGIN: ", emailVar);
         console.log("FORM SENHA: ", senhaVar);
 
-        fetch("/usuarios/autenticar", {
+        fetch("/usuario/autenticar", {
             method: "POST",
             headers: {
                 "Content-Type": "application/json"
@@ -97,11 +90,8 @@
                     sessionStorage.EMAIL_USUARIO = json.email;
                     sessionStorage.NOME_USUARIO = json.nome;
                     sessionStorage.ID_USUARIO = json.id;
-                    sessionStorage.AQUARIOS = JSON.stringify(json.aquarios)
-
-                    setTimeout(function () {
-                        window.location = "./dashboard/cards.html";
-                    }, 1000); // apenas para exibir o loading
+                    window.location = "./painel.html";
+                    
 
                 });
 
@@ -111,7 +101,6 @@
 
                 resposta.text().then(texto => {
                     console.error(texto);
-                    finalizarAguardar(texto);
                 });
             }
 
@@ -120,10 +109,5 @@
         })
 
         return false;
-    }
-
-    function sumirMensagem() {
-        cardErro.style.display = "none"
-    }
-
+    } 
 </script>
