--- a/web data viz/public/login.html
+++ b/web data viz/public/login.html
@@ -37,7 +37,7 @@
                 <span>Email:</span>
                 <input type="text" id="email_input">
                 <span>Senha:</span>
-                <input type="text" id="senha_input">
+                <input type="password" id="senha_input">
                 <button onclick="entrar()">Login</button> <br>
                 <span>Não tem conta? <br>
                 Cadastre-se <a href="cadastro.html" style="color: #702424;">aqui</a>.
@@ -58,21 +58,18 @@
 
 
     function entrar() {
-
-
         var emailVar = email_input.value;
         var senhaVar = senha_input.value;
 
         if (emailVar == "" || senhaVar == "") {
-            alert('Mensagem de erro para todos os campos em branco');
+            alert('Verifique o email e senha.')
             return false;
         }
-        else {console.log('Ok')}
 
         console.log("FORM LOGIN: ", emailVar);
         console.log("FORM SENHA: ", senhaVar);
 
-        fetch("/usuarios/autenticar", {
+        fetch("/usuario/autenticar", {
             method: "POST",
             headers: {
                 "Content-Type": "application/json"
@@ -93,10 +90,8 @@
                     sessionStorage.EMAIL_USUARIO = json.email;
                     sessionStorage.NOME_USUARIO = json.nome;
                     sessionStorage.ID_USUARIO = json.id;
-
-                    setTimeout(function () {
-                        window.location = "./dashboard/cards.html";
-                    }, 1000); // apenas para exibir o loading
+                    window.location = "./painel.html";
+                    
 
                 });
 
@@ -114,6 +109,5 @@
         })
 
         return false;
-    }
-
+    } 
 </script>
