--- a/web data viz/public/sobre-o-livro.html
+++ b/web data viz/public/sobre-o-livro.html
@@ -48,11 +48,12 @@
                 <img src="imgs/capa-livro.jpg" style="width: 80%; height: 80%; padding-top: 25px;" alt="" > 
                 <div class="kpi">
                     <div class="review">
-                        <div class="cards" id="cardAquarios">
-                            <div class="card-aquario">
-                                <div class="desc-aquario">
-                                    <div class="temperatura">
-                                        <h1 id="temp_aquario_${item.id}">4.5</h1>
+                        <div class="cards">
+                            <div>
+                                <div>
+                                    <div>
+                                        <h1 id="media_rating" style="color: #10491B; padding-left: 50px;">--</h1>
+                                        <h3 style="color: #10491B">Média de Avaliações</h3>
                                     </div>
                                 </div>
                             </div>
@@ -60,16 +61,16 @@
                     </div>
                 </div>    
                 <div class="rating">
-                <input type="radio" id="star5" name="rating" value="5" />
-                <label for="star5" title="5 estrelas">★</label>
-                <input type="radio" id="star4" name="rating" value="4" />
-                <label for="star4" title="4 estrelas">★</label>
-                <input type="radio" id="star3" name="rating" value="3" />
-                <label for="star3" title="3 estrelas">★</label>
-                <input type="radio" id="star2" name="rating" value="2" />
-                <label for="star2" title="2 estrelas">★</label>
-                <input type="radio" id="star1" name="rating" value="1" />
-                <label for="star1" title="1 estrela">★</label>                   
+                    <input type="radio" id="star5" name="rating" value="5" onchange="enviarAvaliacao(this.value)" />
+                    <label for="star5" title="5 estrelas">★</label>
+                    <input type="radio" id="star4" name="rating" value="4" onchange="enviarAvaliacao(this.value)" />
+                    <label for="star4" title="4 estrelas">★</label>
+                    <input type="radio" id="star3" name="rating" value="3" onchange="enviarAvaliacao(this.value)" />
+                    <label for="star3" title="3 estrelas">★</label>
+                    <input type="radio" id="star2" name="rating" value="2" onchange="enviarAvaliacao(this.value)" />
+                    <label for="star2" title="2 estrelas">★</label>
+                    <input type="radio" id="star1" name="rating" value="1" onchange="enviarAvaliacao(this.value)" />
+                    <label for="star1" title="1 estrela">★</label> 
                 </div>
             </div>
 
@@ -92,27 +93,56 @@
         window.location = "/login.html"; 
     }
 
-    /* Pegar KPIs */
+    const idUsuario = sessionStorage.ID_USUARIO;
+    const idLivro = 1;
 
-    function exibirAquarios() {
-        JSON.parse(sessionStorage.AQUARIOS).forEach(item => {
-            document.getElementById("cardAquarios").innerHTML += `
-                    <div class="card-aquario">
-                        <div class="title-aquario">
-                            <h1>${item.descricao}</h1>
-                        </div>
-                        <div class="desc-aquario">
-                        <div class="temperatura">
-                            <p id="temp_aquario_${item.id}">-°C</p>
-                        </div>
-                        <div class="cor-alerta" id="card_${item.id}"></div>
-                    </div>
-                    </div>
-                    `
+    function carregarMedia() {
+    fetch("/avaliacao/media")
+        .then(r => r.json())
+        .then(dados => {
+            document.getElementById("media_rating").innerText = dados[0].media ?? "0.0";
         });
     }
 
-     function exibirMenu(){
+    carregarMedia();
+
+    function enviarAvaliacao() {
+    const nota = document.querySelector('input[name="rating"]:checked')?.value;
+
+    if (!nota) {
+        alert("Selecione uma nota.");
+        return;
+    }
+
+    const idUsuario = sessionStorage.ID_USUARIO;
+
+    if (!idUsuario) {
+        alert("Usuário não está logado.");
+        return;
+    }
+
+    fetch("/avaliacao/enviar", {
+        method: "POST",
+        headers: {
+            "Content-Type": "application/json"
+        },
+        body: JSON.stringify({
+            idUsuario: idUsuario,
+            idLivro: 1,
+            nota: Number(nota)
+        })
+    })
+    .then(r => {
+        if (r.ok) {
+            alert("Avaliação enviada.");
+            carregarMedia();
+        } else {
+            alert("Erro ao enviar avaliação.");
+        }
+    });
+}
+
+    function exibirMenu(){
         if (menu == false) {
             menu = true;
             menu_lateral.style.display = "flex";
