Refatoração do CSS na pasta Site - Testes

--- a/Site/sobre-o-livro.html
+++ b/Site/sobre-o-livro.html
@@ -48,10 +48,10 @@
                 <img src="imgs/capa-livro.jpg" style="width: 80%; height: 80%; padding-top: 25px;" alt="" > 
                 <div class="kpi">
                     <div class="review">
-                        <div class="cards" id="cardAquarios">
-                            <div class="card-aquario">
-                                <div class="desc-aquario">
-                                    <div class="temperatura">
+                        <div class="cards">
+                            <div>
+                                <div>
+                                    <div>
                                         <h1 id="media_rating" style="color: #10491B; padding-left: 50px;">--</h1>
                                         <h3 style="color: #10491B">Média de Avaliações</h3>
                                     </div>
@@ -76,11 +76,13 @@
 
         </div>
         <div class="faixa"> </div>
+
+        <footer>
+            <span>Elaborado por João Ricardo Jortieke Junior, 2025.</span>
+        </footer>
     </section>
 </body>
-<footer>
-    <span>Elaborado por João Ricardo Jortieke Junior, 2025.</span>
-</footer>
+
 </html>
 
 <script>
