--- a/web data viz/public/forum.html
+++ b/web data viz/public/forum.html
@@ -84,7 +84,11 @@
 
 <script>
 b_usuario.innerHTML = sessionStorage.NOME_USUARIO;
-
+if (sessionStorage.ID_USUARIO == undefined) {
+        alert("Você precisa estar logado para acessar esta página.");
+        window.location = "/login.html"; 
+    }
+    
 window.onload = () => {
     carregarPosts();
 };
