--- a/web data viz/public/sobre-mim.html
+++ b/web data viz/public/sobre-mim.html
@@ -77,10 +77,10 @@
     b_usuario.innerHTML = sessionStorage.NOME_USUARIO;
     var menu = false;
 
-    /* if (sessionStorage.ID_USUARIO == undefined) {
+    if (sessionStorage.ID_USUARIO == undefined) {
         alert("Você precisa estar logado para acessar esta página.");
         window.location = "/login.html"; 
-    } */
+    }
 
      function exibirMenu(){
         if (menu == false) {
