--- a/web data viz/public/forum.html
+++ b/web data viz/public/forum.html
@@ -89,10 +89,10 @@
 
 <script>
 b_usuario.innerHTML = sessionStorage.NOME_USUARIO;
-/* if (sessionStorage.ID_USUARIO == undefined) {
+if (sessionStorage.ID_USUARIO == undefined) {
         alert("Você precisa estar logado para acessar esta página.");
         window.location = "/login.html"; 
-    } */
+    } 
     
 window.onload = () => {
     carregarPosts();
