--- a/web data viz/public/sobre-o-livro.html
+++ b/web data viz/public/sobre-o-livro.html
@@ -89,11 +89,11 @@
     b_usuario.innerHTML = sessionStorage.NOME_USUARIO;
     var menu = false;
 
-    /* 
-    if (sessionStorage.ID_USUARIO == undefined) {
+
+if (sessionStorage.ID_USUARIO == undefined) {
         alert("Você precisa estar logado para acessar esta página.");
         window.location = "/login.html"; 
-    }Autenticação */
+    }Autenticação 
 
     const idUsuario = sessionStorage.ID_USUARIO;
     const idLivro = 1;
